--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-    "scripts":{
-        "start": "node server.js"
-    },
-    "devDependencies": {
-        "babel-core": "^6.14.0",
-        "babel-loader": "^6.2.5",
-        "babel-preset-es2015": "^6.14.0",
-        "babel-preset-react": "^6.11.1",
-        "babel-preset-stage-0": "^6.5.0",
-        "react-hot-loader": "^3.0.0-beta.2",
-        "webpack": "^1.13.1",
-        "webpack-dev-server": "^1.14.1"
-    },
-    "dependencies": {
-        "react": "^15.3.0",
-        "react-dom": "^15.3.0"
-    }
+  "scripts": {
+    "start": "node server.js"
+  },
+  "devDependencies": {
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "react-hot-loader": "^3.0.0-beta.2",
+    "standard": "^8.0.0",
+    "standard-loader": "^5.0.0",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-validator": "^2.2.7"
+  },
+  "dependencies": {
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0"
+  }
 }
