--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "react-hot-loader": "^3.0.0-beta.2",
-    "standard": "^8.0.0",
-    "standard-loader": "^5.0.0",
+    "semistandard": "^8.0.0",
+    "semistandard-loader": "0.0.3",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-validator": "^2.2.7"
